fix (Sass): Correct unknown white bar visible beneath <output> element

--- a/assets/styles/partials/_event-modal.scss
+++ b/assets/styles/partials/_event-modal.scss
@@ -26,35 +26,40 @@
   }
   .dz-wrapper {
     output {
-      @include flex(flex, row, flex-start);
+      @include flex();
       position: relative;
-      overflow-x: scroll;
+      padding: 0.75rem 0.5rem;
+      overflow-x: overlay;
       .thumb {
-        @include cbBorderRadii(6px);
         position: relative;
         width: 10vw;
         height: 10vw;
         margin-right: 1vw;
-        border: 1px solid $theme-content-lt-gray;
         flex-shrink: 0;
         background:  transparent no-repeat center / contain;
         overflow: hidden;
-        &:before {
-          @include cbTransition(0.25s ease-in);
-          @extend %hidden;
-          position: absolute;
-          content: '';
-          top: 0;
-          width: 100%;
-          height: 30%;
-          background: $bckg-black-op;
-          background: -webkit-linear-gradient(to bottom, rgba(0, 0, 0, 0.56) 0%, rgba(0, 0, 0, 0.35) 60%, transparent 99%);
-          background:    -moz-linear-gradient(to bottom, rgba(0, 0, 0, 0.56) 0%, rgba(0, 0, 0, 0.35) 60%, transparent 99%);
-          background:      -o-linear-gradient(to bottom, rgba(0, 0, 0, 0.56) 0%, rgba(0, 0, 0, 0.35) 60%, transparent 99%);
-          background:         linear-gradient(to bottom, rgba(0, 0, 0, 0.56) 0%, rgba(0, 0, 0, 0.35) 60%, transparent 99%);
-          z-index: 1;
+        &-wrapper {
+          @include cbBorderRadii(4px);
+          padding: 2px 4px;
+          border: 1px solid $theme-content-lt-gray;
+          background-color: #F7F7F7;
+          &:before {
+            @include cbTransition(0.25s ease-in);
+            @extend %hidden;
+            position: absolute;
+            content: '';
+            top: 0;
+            width: 100%;
+            height: 30%;
+            background: $bckg-black-op;
+            background: -webkit-linear-gradient(to bottom, rgba(0, 0, 0, 0.56) 0%, rgba(0, 0, 0, 0.35) 60%, transparent 99%);
+            background:    -moz-linear-gradient(to bottom, rgba(0, 0, 0, 0.56) 0%, rgba(0, 0, 0, 0.35) 60%, transparent 99%);
+            background:      -o-linear-gradient(to bottom, rgba(0, 0, 0, 0.56) 0%, rgba(0, 0, 0, 0.35) 60%, transparent 99%);
+            background:         linear-gradient(to bottom, rgba(0, 0, 0, 0.56) 0%, rgba(0, 0, 0, 0.35) 60%, transparent 99%);
+            z-index: 1;
+          }
+          &:hover:before { @extend %visible; }
         }
-        &:hover:before { @extend %visible; }
         img { @include center(); }
       }
     }
